Fix sidenav height and overflow hidden html element

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,9 +1,15 @@
 @import "./variables.scss";
 @import '~font-awesome/css/font-awesome.min.css';
 
+html {
+  height: 100vh;
+  overflow: hidden;
+}
+
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  margin: 0
+  margin: 0;
+  height: 100%;
 }
 
 .fa {
